objects/TimeSheet.object
<CustomObject>
    <fields>
        <fullName>Employee_Approval_Submitted__c</fullName>
        <label>Employee Approval Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Being_Optimized__c</fullName>
        <formula>ServiceResource.IsOptimizationCapable</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Being Optimized?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <description>The Manager of the Service Resource.</description>
        <formula>ServiceResource.RelatedRecord.Manager_for_Reporting__c</formula>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Sheet_Hours_Worked__c</fullName>
        <description>Number of Hours Worked within Pay Period</description>
        <formula>IF( Time_Sheet_Minutes_Worked__c &lt;&gt; 0, Time_Sheet_Minutes_Worked__c / 60, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Hours Worked within Pay Period</inlineHelpText>
        <label>Time Sheet Hours Worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Sheet_Minutes_Worked__c</fullName>
        <description>Number of Minutes Worked within Pay Period</description>
        <inlineHelpText>Number of Minutes Worked within Pay Period</inlineHelpText>
        <label>Time Sheet Minutes Worked</label>
        <summarizedField>TimeSheetEntry.DurationInMinutes</summarizedField>
        <summaryFilterItems>
            <field>TimeSheetEntry.Type</field>
            <operation>notContain</operation>
            <value>Break</value>
        </summaryFilterItems>
        <summaryForeignKey>TimeSheetEntry.TimeSheetId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_TimeSheets</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>ServiceResource</columns>
        <columns>Time_Sheet_Hours_Worked__c</columns>
        <columns>Manager__c</columns>
        <columns>StartDate</columns>
        <columns>EndDate</columns>
        <columns>LastModifiedDate</columns>
        <filterScope>Everything</filterScope>
        <label>All Time Sheets</label>
    </listViews>
    <listViews>
        <fullName>My_TimeSheets</fullName>
        <filterScope>Mine</filterScope>
        <label>My Time Sheets</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Post_Approval_Lockdown</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name != &apos;System Administrator&apos;, ISPICKVAL(Status, &apos;Approved&apos;))</errorConditionFormula>
        <errorMessage>Time Sheets cannot be edited after being approved.</errorMessage>
    </validationRules>
</CustomObject>